# armchair-reader

./: Cargo.toml
poppler-rs/: .gitignore  Cargo.toml  README.md
poppler-rs/src/: ffi.rs  lib.rs  util.rs
src/: main.rs  ui.rs
src/views/: headerbar.ui
