[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>",
          "Denys Vitali <denys@denv.it>"]
name = "poppler"
license = "GPL-2.0"
version = "0.2.4"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"

[dependencies]
cairo-rs = { version= "0.6.0", features = ["pdf"]}
cairo-sys-rs = "0.8.0"
glib = "0.7.0"
glib-sys = "0.8.0"
gobject-sys = "0.8.0"
